--- a/BookingHotel/Views/Hotel/Login.cshtml
+++ b/BookingHotel/Views/Hotel/Login.cshtml
@@ -37,7 +37,7 @@
                     </div> *@
                     <div class="card-footer text-muted text-center d-flex justify-content-center align-items-center">
                         <span class="mr-2">Bạn chưa có tài khoản?</span>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="HomeBookingHotel" asp-action="SignUp">Đăng ký</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Hotel" asp-action="SignUp">Đăng ký</a>
                     </div>
                 </div>
             </div>
