--- a/BookingHotel/Views/Hotel/SignUp.cshtml
+++ b/BookingHotel/Views/Hotel/SignUp.cshtml
@@ -41,7 +41,7 @@
                     </div> *@
                     <div class="card-footer text-muted text-center d-flex justify-content-center align-items-center">
                         <span class="mr-2">Bạn đã có sẵn tài khoản?</span>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="HomeBookingHotel" asp-action="Login">Đăng nhập</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Hotel" asp-action="Login">Đăng nhập</a>
                     </div>
                 </div>
             </div>
