--- a/BookingHotel/Views/Shared/_Layout.cshtml
+++ b/BookingHotel/Views/Shared/_Layout.cshtml
@@ -37,14 +37,7 @@
                     <input class="form-control mr-sm-2" type="search" placeholder="Search hotels..." aria-label="Search">
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Tìm kiếm</button>
                 </form>
-                <div class="btn_log_sign">
-                    <button class="btn btn-light mr-2 ml-2 btn-sm" type="button">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Hotel" asp-action="Login">Login</a>
-                    </button>
-                    <button class="btn btn-outline-light btn-sm" type="button">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Hotel" asp-action="SignUp">Sign up</a>
-                    </button>
-                </div>
+                <partial name="_LoginPartial" />
             </div>
         </nav>
     </header>
