--- a/BookingHotel/Views/Shared/_Layout.cshtml
+++ b/BookingHotel/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
-            <a class="nav-link navbar-brand" asp-area="" asp-controller="Hotel" asp-action="Index">Booking Hotel</a>
+            <a class="nav-link navbar-brand" asp-area="" asp-controller="Region" asp-action="Index">Booking Hotel</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
