sủa giao diện, thêm chức năng quản lý hotel và region của admin

--- a/BookingHotel/Areas/Admin/Views/Region/Add.cshtml
+++ b/BookingHotel/Areas/Admin/Views/Region/Add.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Add Region";
 }
-<h2>Add Hotels</h2>
+<h2 class="pmt-3">Add Hotels</h2>
 <a asp-action="index">Return to home</a>
 <form asp-action="AddImage" method="post" enctype="multipart/form-data">
     <div class="form-group">
