--- a/BookingHotel/Areas/Admin/Views/Region/Update.cshtml
+++ b/BookingHotel/Areas/Admin/Views/Region/Update.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Update Region";
 }
-<h2>Update Region</h2>
+<h2 class="pt-3">Update Region</h2>
 <a asp-action="index">Return to home</a>
 <form asp-action="UpdateImage" method="post" enctype="multipart/form-data">
     <input type="hidden" asp-for="Id" />
