--- a/BookingHotel/Views/Region/Index.cshtml
+++ b/BookingHotel/Views/Region/Index.cshtml
@@ -12,127 +12,411 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous"
+          referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <style>
-        .search-container {
-            background-color: #f8f9fa;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 30px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .btn-search {
-            background-color: #007bff;
-            color: #fff;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-
-            .btn-search:hover {
-                color: white;
-                background-color: #0056b3;
-            }
-
-        .table {
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-            .table th {
-                background-color: #007bff;
-                color: #fff;
-                font-weight: bold;
-            }
-
-            .table td {
-                vertical-align: middle;
-            }
-
-            .table img {
-                max-width: 100px;
-                max-height: 100px;
-            }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-        }
-
-        .region-card {
-            position: relative;
-        }
-
-        .card-img-overlay {
+        /*--------------home--------*/
+        .home .image img {
             position: absolute;
             top: 0;
             left: 0;
+            z-index: -1;
             width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(0, 0, 0, 0.5);
+            height:35%;
         }
 
-        .region-title {
+        .home .text {
+            max-width: 50%;
             color: white;
-            font-weight: bold;
-            text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+            margin: 20% 0 0 10%;
         }
 
+        .home h1 {
+            font-size: 80px;
+            font-weight: 400;
+        }
+
+        .home p {
+            font-weight: 400;
+            line-height: 25px;
+            font-family: sans-serif;
+            font-size: 17px;
+            margin: 50px 0 0 50px;
+        }
+
+        .read-more {
+            padding: 20px 40px;
+            background: none;
+            outline: none;
+            border: 2px solid white;
+            border-radius: 50px;
+            color: white;
+            margin-top: 20px;
+        }
+
+        .home .read-more {
+            margin-left: 50px;
+        }
+
+        .home .image_item {
+            position: absolute;
+            top: 7%;
+            right: 20%;
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+        }
+
+            .home .image_item img {
+                width: 140px;
+                height: 94px;
+                margin: 10px;
+                transition: 0.5s;
+            }
+
+                .home .image_item img.active {
+                    border: 2px solid white;
+                }
+
+        .home .box .text {
+            position: relative;
+        }
+
+            .home .box .text::after {
+                position: absolute;
+                content: 'T';
+                font-size: 500px;
+                top: -120%;
+                font-weight: bold;
+                opacity: 0.1;
+            }
+
+        /*--------------home--------*/
+        /*--------------book--------*/
+        .flex {
+            display: flex;
+            margin-top: 10%;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 30px;
+        }
+
+        .book {
+            margin-top: 5%;
+            width: 100%;
+            height: 20vh;
+            color: white;
+        }
+
+            .book .input {
+                background: #242e5a;
+                padding: 20px 20px 40px 20px;
+            }
+
+            .book .search {
+                background: #3f9cc1;
+                padding: 20px;
+            }
+
+        .flex input {
+            width: 100%;
+            padding: 15px;
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            outline: none;
+            background: #263760;
+            margin-top: 20px;
+            color: white;
+        }
+
+        ::placeholder {
+            color: white;
+        }
+
+        .book .search {
+            width: 20%;
+        }
+
+            .book .search input {
+                background: none;
+                border: none;
+                font-weight: bold;
+                font-size: 20px;
+                margin-top: 40px;
+            }
+
+        /*--------------book--------*/
+
+        /*--------------about--------*/
+        .top {
+            margin-top: 10%;
+        }
+
+        .mtop {
+            margin-top: 5%;
+        }
+
+        .left, .right {
+            width: 50%;
+        }
+
+        .about {
+            margin-bottom: 50px;
+        }
+
+            .about .img {
+                position: relative;
+            }
+
+            .about .image1 {
+                width: 310px;
+                height: 450px;
+            }
+
+            .about .image2 {
+                width: 325px;
+                height: 220px;
+                position: absolute;
+                bottom: 5px;
+                z-index: 2;
+                right: 30%;
+            }
+
+        .heading {
+            position: relative;
+        }
+
+            .heading::after {
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '';
+                width: 100px;
+                height: 4px;
+                background: #C1B086;
+            }
+
+            .heading h5 {
+                font-weight: 400;
+                letter-spacing: 2px;
+                padding-top: 20px;
+                color: #5f5f5f;
+            }
+
+            .heading h2 {
+                font-size: 30px;
+                font-weight: 400;
+                margin: 20px 0 40px 0;
+                color: #222222;
+            }
+
+            .heading p {
+                margin-bottom: 20px;
+                line-height: 25px;
+                color: #5f5f5f;
+                margin: 0 0 20px 50px;
+            }
+
+
+
+        /*--------------about--------*/
+
+        /*--------------gallary--------*/
+        .gallary img {
+            width: 270px;
+            height: 350px;
+            position: relative; /* Thêm thuộc tính position và relative để sử dụng position absolute cho tên và overlay */
+        }
+
+        .gallary .item {
+            position: relative;
+            overflow: hidden; /* Loại bỏ phần dư thừa của tên ảnh khi sử dụng position absolute */
+        }
+
+            .gallary .item .overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5); /* Màu nền đen nhạt */
+                opacity: 0; /* Ẩn lớp overlay ban đầu */
+                transition: opacity 0.3s; /* Hiệu ứng hiển thị lớp overlay */
+            }
+
+            .gallary .item:hover .overlay {
+                opacity: 1; /* Hiển thị lớp overlay khi rê chuột vào ảnh */
+            }
+
+            .gallary .item .name-overlay {
+                position: absolute;
+                top: 50%; /* Đưa tên vào giữa ảnh */
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-align: center;
+                font-size: 18px; /* Kích thước chữ tên */
+                font-weight: bold; /* Chữ đậm */
+                color: white; /* Màu chữ trắng */
+                z-index: 1; /* Đảm bảo tên được hiển thị trên overlay */
+            }
+
+        .owl-carousel .owl-next,
+        .owl-carousel .owl-prev {
+            height: 50px;
+            position: absolute;
+            width: 50px;
+            cursor: pointer;
+            top: 35%;
+            background: white !important;
+            transition: 0.5s;
+        }
+
+        .owl-carousel .owl-prev {
+            left: 33px;
+        }
+
+        .owl-carousel .owl-next {
+            right: 33px;
+        }
+
+            .owl-carousel .owl-next:hover,
+            .owl-carousel .owl-prev:hover {
+                background: #C1B086 !important;
+            }
+        /*--------------gallary--------*/
     </style>
 </head>
 <body>
-    <div class="container my-5">
-        <h1 class="text-center mb-4">Tìm chỗ nghỉ tiếp theo</h1>
-        <p class="text-center mb-4">Tìm ưu đãi khách sạn, chỗ nghỉ đang nhà và nhiều hơn nữa...</p>
-        <div class="search-container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="destination">Bạn muốn đến đâu?</label>
-                        <input type="text" class="form-control" id="destination" placeholder="Nhập điểm đến">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="checkin">Ngày nhận phòng</label>
-                        <input type="date" class="form-control" id="checkin">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="checkout">Ngày trả phòng</label>
-                        <input type="date" class="form-control" id="checkout">
-                    </div>
+    <section class="home" id="home">
+        <div class="head_container">
+            <div class="box">
+                <div class="text">
+                    <h1>WELCOME!!!</h1>
+                    <p>Khám phá, Thư giãn và Nghỉ ngơi một cách Dễ dàng - Trải nghiệm du lịch hoàn hảo tại Booking Hotel! </p>
+                    <button class="read-more">XEM THÊM</button>
                 </div>
             </div>
-            <div class="col-md-4">
-                <button type="button" class="btn btn-search btn-block">Tìm</button>
+            <div class="image">
+                <img src="/images/images_Region_Index/home1.jpg" class="slide">
+            </div>
+            <div class="image_item">
+                <img src="/images/images_Region_Index/home1.jpg" alt="" class="slide active" onclick="img('/images/images_Region_Index/home1.jpg')">
+                <img src="/images/images_Region_Index/home2.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/home2.jpg')">
+                <img src="/images/images_Region_Index/home3.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/home3.jpg')">
+                <img src="/images/images_Region_Index/home4.jpg" alt="" class="slide" onclick="img('/images/images_Region_Index/home4.jpg')">
             </div>
         </div>
-    </div>
+    </section>
+    <script>
+        function img(anything) {
+            document.querySelector('.slide').src = anything;
+        }
 
-    <div class="container my-5">
-        <h2 class="text-center mb-4">Các lựa chọn phổ biến nhất cho du khách từ Việt Nam</h2>
-        <div class="row">
-            @foreach (var item in Model.Take(6))
-            {
-                <div class="col-md-4 mb-4">
-                    <div class="card region-card">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title region-title">@item.Name</h5>
-                        </div>
-                        <img src="@item.ImageUrl" class="card-img-top" alt="@item.Name" height="270px">
-                    </div>
+        function change(change) {
+            const line = document.querySelector('.image');
+            line.style.background = change;
+        }
+    </script>
+
+    <section class="book">
+        <div class="container flex">
+            <div class="input grid">
+                <div class="box">
+                    <label>Ngày nhận phòng:</label>
+                    <input type="date" placeholder="Check-in-Date">
                 </div>
+                <div class="box">
+                    <label>Ngày trả phòng:</label>
+                    <input type="date" placeholder="Check-out-Date">
+                </div>
+                <div class="box">
+                    <label>Người lớn:</label> <br>
+                    <input type="number" placeholder="0">
+                </div>
+                <div class="box">
+                    <label>Trẻ em:</label> <br>
+                    <input type="number" placeholder="0">
+                </div>
+            </div>
+            <div class="search">
+                <input type="submit" value="SEARCH">
+            </div>
+        </div>
+    </section>
+
+    <section class="about top" id="about">
+        <div class="container flex">
+            <div class="left">
+                <div class="img">
+                    <img src="/images/images_Region_Index/a1.jpg" alt="" class="image1">
+                    <img src="/images/images_Region_Index/a2.jpg" alt="" class="image2">
+                </div>
+            </div>
+            <div class="right">
+                <div class="heading">
+                    <h5>KHU NGHỈ DƯỠNG SANG TRỌNG</h5>
+                    <h2>Chào mừng đến với Booking Hotel</h2>
+                    <p>Khám phá thế giới qua một loạt các lựa chọn chỗ ở đa dạng và trải nghiệm độc đáo, cùng Booking Hotel - Người bạn đồng hành tin cậy trên mọi hành trình du lịch của bạn!</p>
+                    <p>Với sứ mệnh làm cho mỗi chuyến đi trở thành một kỷ niệm đáng nhớ, Booking Hotel không chỉ là nơi bạn tìm thấy chỗ ở lý tưởng, mà còn là điểm đến của trải nghiệm đích thực, nơi mọi chi tiết được chăm sóc tỉ mỉ và đam mê du lịch được thắp lên mỗi hành trình!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gallary mtop" id="gallary">
+        <div class="container">
+            <div class="heading_top flex1">
+                <div class="heading">
+                    <h5>VIỆT NAM</h5>
+                    <h2>Các điểm đến tại Việt Nam</h2>
+                </div>
+            </div>
+
+            <div class="owl-carousel owl-theme">
+                @foreach (var item in Model)
+                {
+                    <div class="item">
+                        <img src="@item.ImageUrl" alt="@item.Name">
+                        <div class="overlay"></div> <!-- Thêm lớp overlay -->
+                        <div class="name-overlay">@item.Name</div> <!-- Thêm tên ở đây -->
+                    </div>
+                }
+
+            </div>
+
+        </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA==" crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+    <script>
+        $('.owl-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            dots: false,
+            navText: ["<i class='fas fa-chevron-left'></i>", "<i class='fas fa-chevron-right'></i>"],
+            responsive: {
+                0: {
+                    items: 1
+                },
+                768: {
+                    items: 2
+                },
+                1000: {
+                    items: 4
+                }
             }
-        </div>
-    </div>
-
-
-
-
+        })
+    </script>
 </body>
 </html>
