--- a/BookingHotel/Views/Shared/_LoginPartial.cshtml
+++ b/BookingHotel/Views/Shared/_LoginPartial.cshtml
@@ -5,19 +5,19 @@
 
 <style>
     #register {
-        border: 1px solid white; /* Thêm viền cho nút register */
+        border: 1px solid white; 
         border-radius: 5px;
         color: white;
-        transition: all 0.3s ease; /* Thêm hiệu ứng chuyển đổi mượt */
+        transition: all 0.3s ease; 
     }
 
         #register:hover {
-            color: #000; /* Màu chữ sau khi hover */
-            background-color: #fff; /* Màu nền sau khi hover */
-            border-color: #fff; /* Màu viền sau khi hover */
+            color: #000; 
+            background-color: #fff; 
+            border-color: #fff; 
         }
     #login {
-        border: 1px solid white; /* Thêm viền cho nút register */
+        border: 1px solid white;
         border-radius: 5px;
         color: white;
     }
