--- a/BookingHotel/Areas/Admin/Views/Hotel/Add.cshtml
+++ b/BookingHotel/Areas/Admin/Views/Hotel/Add.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add Hotel";
 }
 <h2 class="pt-3">Add Hotels</h2>
-<form asp-action="AddImage" method="post" enctype="multipart/form-data">
+<form asp-action="Add" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
