--- a/BookingHotel/Areas/Admin/Views/Hotel/Update.cshtml
+++ b/BookingHotel/Areas/Admin/Views/Hotel/Update.cshtml
@@ -6,7 +6,7 @@
 }
 <h2>Edit Product</h2>
 <a asp-action="index">Return to home</a>
-<form asp-action="UpdateImage" method="post" enctype="multipart/form-data">
+<form asp-action="Update" method="post" enctype="multipart/form-data">
     <input type="hidden" asp-for="Id" />
     <div class="form-group">
         <label asp-for="Name"></label>
