--- a/BookingHotel/Views/Shared/_Layout.cshtml
+++ b/BookingHotel/Views/Shared/_Layout.cshtml
@@ -21,13 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trang chủ</a>
+                        <a class="nav-link" asp-area="" asp-controller="Region" asp-action="Index">Trang chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Phòng</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tiện nghi</a>
+                        <a class="nav-link" asp-area="" asp-controller="Hotel" asp-action="Index">Phòng</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Liên hệ</a>
