--- a/BookingHotel/Views/Shared/_LoginPartial.cshtml
+++ b/BookingHotel/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <style>
     #register {
@@ -26,8 +26,10 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
+        var user = await UserManager.GetUserAsync(User);
+        var fullName = user.FullName;
         <li class="nav-item">
-            <a id="manage" class="nav-link ml-2" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserManager.GetUserName(User)</a>
+            <a id="manage" class="nav-link ml-2" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@fullName</a>
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Region", new { area = "" })">
