--- a/BookingHotel/Views/Hotel/Index.cshtml
+++ b/BookingHotel/Views/Hotel/Index.cshtml
@@ -142,7 +142,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">@item.Name</h5>
                                     <p class="card-text">@item.Address</p>
-                                    <a class="btn btn-primary btn-details" asp-area="" asp-controller="Hotel" asp-action="Detail">Xem chi tiết</a>
+                                    <a class="btn btn-primary btn-details" asp-area="" asp-controller="Hotel" asp-action="Display" asp-route-id="@item.Id">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
