--- a/BookingHotel/Areas/Admin/Views/Room/Index.cshtml
+++ b/BookingHotel/Areas/Admin/Views/Room/Index.cshtml
@@ -10,29 +10,24 @@
     <a asp-action="Add" asp-controller="Room" asp-route-hotelId="@ViewData["HotelId"]" class="btn btn-primary">Add Room</a>
 </p>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Room Number</th>
-            <th>Room Type</th>
-            <th>Price Per Night</th>
-            <th>Available</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var room in Model)
-        {
-            <tr>
-                <td>@room.RoomNumber</td>
-                <td>@room.RoomType.Description</td>
-                <td>@room.PricePerNight</td>
-                <td>@(room.IsAvailable == true ? "Yes" : "No")</td>
-                <td>
-                    <a asp-action="Update" asp-route-id="@room.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@room.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="row">
+    @foreach (var room in Model)
+    {
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Room Number: @room.RoomNumber</h5>
+                    <p class="card-text">Room Type: @room.RoomType.Description</p>
+                    <p class="card-text">Price Per Night: @room.PricePerNight</p>
+                    <p>@(room.IsAvailable == true ? "Yes" : "No")</p>
+                    <div class="card-footer" role="group" aria-label="Room Actions">
+                        <a asp-action="Update" asp-route-id="@room.Id" class="btn btn-secondary btn-sm">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@room.Id" class="btn btn-danger btn-sm">Delete</a>
+                        <a asp-action="AddAmenitiesToRoom" asp-route-id="@room.Id" class="btn btn-info btn-sm text-white">Amenity</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    }
+</div>
