--- a/BookingHotel/Areas/Admin/Views/Room/Index.cshtml
+++ b/BookingHotel/Areas/Admin/Views/Room/Index.cshtml
@@ -19,7 +19,7 @@
                     <h5 class="card-title">Room Number: @room.RoomNumber</h5>
                     <p class="card-text">Room Type: @room.RoomType.Description</p>
                     <p class="card-text">Price Per Night: @room.PricePerNight</p>
-                    <p>@(room.IsAvailable == true ? "Yes" : "No")</p>
+                    <p>@(room.IsAvailable)</p>
                     <div class="card-footer" role="group" aria-label="Room Actions">
                         <a asp-action="Update" asp-route-id="@room.Id" class="btn btn-secondary btn-sm">Edit</a>
                         <a asp-action="Delete" asp-route-id="@room.Id" class="btn btn-danger btn-sm">Delete</a>
