--- a/BookingHotel/Views/Region/Index.cshtml
+++ b/BookingHotel/Views/Region/Index.cshtml
@@ -12,13 +12,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous"
-          referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    
     <style>
         /*--------------home--------*/
         .home .image img {
@@ -274,22 +271,23 @@
             width: 50px;
             cursor: pointer;
             top: 35%;
-            background: white !important;
+            background: #FFFFF0 !important;
             transition: 0.5s;
         }
 
         .owl-carousel .owl-prev {
-            left: 33px;
+            left: -3%;
         }
 
         .owl-carousel .owl-next {
-            right: 33px;
+            right: -3%;
         }
 
             .owl-carousel .owl-next:hover,
             .owl-carousel .owl-prev:hover {
                 background: #C1B086 !important;
             }
+
         /*--------------gallary--------*/
     </style>
 </head>
@@ -401,23 +399,25 @@
             referrerpolicy="no-referrer"></script>
     <script>
         $('.owl-carousel').owlCarousel({
-            loop: true,
-            margin: 10,
+            loop: true, //lặp lại 
+            margin: 10, 
             nav: true,
-            dots: false,
-            navText: ["<i class='fas fa-chevron-left'></i>", "<i class='fas fa-chevron-right'></i>"],
-            responsive: {
+            autoplay: true, // Tự động chạy carousel
+            autoplayTimeout: 2000, // Thời gian chờ giữa các chuyển đổi, tính bằng mili giây (5 giây)
+            autoplayHoverPause: true, // Dừng tự động chạy khi con trỏ chuột được di chuyển lên trên carousel
+            responsive: { 
                 0: {
-                    items: 1
+                    items: 1 
                 },
                 768: {
-                    items: 2
+                    items: 2 
                 },
                 1000: {
-                    items: 4
+                    items: 4 
                 }
             }
-        })
+        });
+
     </script>
 </body>
 </html>
